hphp/hack/test/typecheck/as_expression/vec2.php.like_types.exp
File "vec2.php", line 13, characters 15-32:
Invalid argument (Typing[4110])
File "vec2.php", line 23, characters 22-32:
Expected ~vec<string> because it is an unenforceable type
File "vec2.php", line 13, characters 30-32:
But got vec<mixed>
File "vec2.php", line 16, characters 15-35:
Invalid argument (Typing[4110])
File "vec2.php", line 23, characters 22-32:
Expected ~vec<string> because it is an unenforceable type
File "vec2.php", line 16, characters 30-35:
But got vec<mixed>
File "vec2.php", line 12, characters 30-32:
The type vec expects 1 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 13, characters 22-24:
Definition is here
File "vec2.php", line 13, characters 30-32:
The type vec expects 1 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 13, characters 22-24:
Definition is here
